# C_data_structure

./: .gitignore  CMakeLists.txt
linked_list/: create.c  free.c  insert.c  linked_list.h  main.c  pop.c  push.c  remove.c
src/dynamic_array/: array.h
src/linked_list/: create.c  free.c  get.c  insert.c  iterator.c  iterator.h  len.c  linked_list.h  logger.c  pop.c  push.c  remove.c  rotate.c
src/stack/: create.c  free.c  peek.c  pop.c  push.c  size.c  stack.h
tests/: dynamic_array.c  linked_list.c  stack.c
